applications/longhorn/network.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: infra-gateway
      namespace: istio-system
  hostnames:
    - longhorn.${APPLICATIONS.GLOBAL.BASE_URL}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set: 
            - name: X-Forwarded-For
              value: "x-forwarded-for"
            - name: X-Forwarded-Proto
              value: "https"
